syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Persons {
	rpc GetPerson (PersonRequest) returns (PersonResponse);
	rpc GetPersons (PersonsRequest) returns (stream PersonResponse);
}

message PersonRequest {
	int32 userId = 1;
}

message PersonResponse {
	int32 userId = 1;
	string firstName = 2;
	string lastName = 3;
	bool isVerified = 4;
}

message PersonsRequest {

}